feat: add Linux WorkBuddy northbound provisioning
